[package]
name = "flatten_objects"
version = "0.1.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "A container that stores numbered objects. Each object can be assigned with a unique ID."
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/flatten_objects"
documentation = "https://docs.rs/flatten_objects"
keywords = ["arceos", "data-structures"]
categories = ["no-std", "data-structures"]

[dependencies]
bitmaps = { version = "3.2", default-features = false }
